src/objects/Cricket_Team__c.object
<CustomObject>
    <description>Stores Team related data like Name, Score of  team and Owner details.</description>
    <fields>
        <fullName>Cricket_Team_Owner_Key__c</fullName>
        <description>Cricket Team&apos;s Owner Key</description>
        <inlineHelpText>Cricket Team&apos;s Owner Key</inlineHelpText>
        <label>Cricket Team&apos;s Owner Key</label>
        <length>25</length>
        <maskChar>asterisk</maskChar>
        <maskType>all</maskType>
        <required>true</required>
        <type>EncryptedText</type>
    </fields>
    <fields>
        <fullName>Is_Team_Locked__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Specifies whether team is locked or not. Locked team is allowed to play, and is eligible for further considerations.</description>
        <inlineHelpText>Specifies whether team is locked or not. Locked team is allowed to play, and is eligible for further considerations.</inlineHelpText>
        <label>Is Team Locked?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Owner_Contact__c</fullName>
        <description>Stores Team Owner&apos;s Contact Number.</description>
        <inlineHelpText>Store your Team&apos;s Contact Number.</inlineHelpText>
        <label>Owner&apos;s Contact</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Owner_Email__c</fullName>
        <description>Stores email address of team&apos;s owner.</description>
        <inlineHelpText>Store email address of your team.</inlineHelpText>
        <label>Owner&apos;s Email</label>
        <required>true</required>
        <type>Email</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Owner_Name__c</fullName>
        <description>Owner&apos;s Name</description>
        <inlineHelpText>Owner&apos;s Name</inlineHelpText>
        <label>Owner&apos;s Name</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Owners_Unique_Code__c</fullName>
        <caseSensitive>true</caseSensitive>
        <description>Stores Team Owner&apos;s unique code value.</description>
        <inlineHelpText>Stores Team Owner&apos;s unique code value.</inlineHelpText>
        <label>Owner&apos;s Unique Code</label>
        <length>18</length>
        <required>true</required>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>PointsSource_FuturePredictions__c</fullName>
        <description>Points Source - Future Predictions</description>
        <inlineHelpText>Points Source - Future Predictions</inlineHelpText>
        <label>Points Source - Future Predictions</label>
        <summarizedField>Cricket_Game_Future_Predictions__c.Total_Future_Prediction_Points__c</summarizedField>
        <summaryForeignKey>Cricket_Game_Future_Predictions__c.Owner__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>PointsSource_GamePrediction__c</fullName>
        <description>Game Prediction Points</description>
        <inlineHelpText>Game Prediction Points</inlineHelpText>
        <label>Points Source - Game Prediction</label>
        <summarizedField>Cricket_Game_Prediction__c.Total_Game_Prediction_Points__c</summarizedField>
        <summaryForeignKey>Cricket_Game_Prediction__c.Owner__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>PointsSource_TeamPlayer__c</fullName>
        <description>Points Source - Team Player</description>
        <inlineHelpText>Points Source - Team Player</inlineHelpText>
        <label>Points Source - Team Player</label>
        <summarizedField>Cricket_Team_Player__c.Total_Points_Recalculated__c</summarizedField>
        <summaryFilterItems>
            <field>Cricket_Team_Player__c.In_Playing_XI__c</field>
            <operation>equals</operation>
            <value>True</value>
        </summaryFilterItems>
        <summaryForeignKey>Cricket_Team_Player__c.Cricket_Team__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Team_Playing_XI_Count__c</fullName>
        <description>Rollup summary field to summarize result of child Cricket Team Player&apos;s Playing XI.</description>
        <inlineHelpText>Rollup summary field to summarize result of child Cricket Team Player&apos;s Playing XI.</inlineHelpText>
        <label>Team&apos;s Playing XI Count</label>
        <summaryFilterItems>
            <field>Cricket_Team_Player__c.In_Playing_XI__c</field>
            <operation>equals</operation>
            <value>True</value>
        </summaryFilterItems>
        <summaryForeignKey>Cricket_Team_Player__c.Cricket_Team__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Total_Owner_Points__c</fullName>
        <description>Total Owner&apos;s Points</description>
        <formula>PointsSource_FuturePredictions__c +  PointsSource_GamePrediction__c +  PointsSource_TeamPlayer__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Total Owner&apos;s Points</inlineHelpText>
        <label>Total Owner&apos;s Points</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Cricket Team</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Team Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Cricket Teams</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>